--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
   "dependencies": {
     "express": "^4.18.3",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "yaml": "^2.4.1"
+  },
+  "name": "skill-tracker-api",
+  "version": "1.0.0",
+  "main": "index.ts",
+  "repository": "https://github.com/MaxSaunders/skill-tracker-api.git",
+  "author": "Max Saunders <maxsaunders8794@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.ts"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.29",
+    "typescript": "^5.4.2"
   }
 }
