--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.29",
     "typescript": "^5.4.2"
+  },
+  "engines": {
+    "node": "18.19.0"
   }
 }
