--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "nodemon": "^3.1.0",
     "swagger-jsdoc": "^6.2.8",
@@ -15,7 +16,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.ts",
-    "start": "node index.ts"
+    "start": "npx ts-node index.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
