--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "nodemon": "^3.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "yaml": "^2.4.1"
+    "yaml": "^2.4.1",
+    "@types/node": "^20.11.30"
   },
   "name": "skill-tracker-api",
   "version": "1.0.0",
