--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "yaml": "^2.4.1",
+    "typescript": "^5.4.2",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.30"
   },
   "name": "skill-tracker-api",
