--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.30",
+    "@types/pg": "^8.11.4",
+    "@types/uuid": "^9.0.8",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "nodemon": "^3.1.0",
+    "pg": "^8.11.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "yaml": "^2.4.1",
     "typescript": "^5.4.2",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.30"
+    "uuid": "^9.0.1",
+    "yaml": "^2.4.1"
   },
   "name": "skill-tracker-api",
   "version": "1.0.0",
